# dtcc-io

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-wheels.yml  ci.yml  main.yml
cmake/: FindDTCCModel.cmake
cpp/: CMakeLists.txt
cpp/src/: create_pb_pointcloud.cpp
datamodel_io/dtcc/: dtcc_pb2.py
docker/install_scripts/: install_assimp.sh  install_dependencies.sh  install_dtccmodel.sh  install_py_libs.sh
docs/: installation.md  usage.md
dtcc/io/: Bounds.py  CityModelIO.py  ElevationModelIO.py  MeshIO.py  PointCloudIO.py  citymodel.py  elevationmodel.py  pointcloud.py
dtcc/io/dtcc_model/protobuf/: dtcc_pb2.py  dtcc_pb2.pyi
sandbox/: sandbox.py
sandbox/protobuf-any-2023/: test.py
src/: create_pb_pointcloud.cpp  dtcc-convert-geodata.py
src/cpp/: bindings.cpp
src/dtcc-io/: citymodel.py
src/dtcc/io/: __init__.py
src/dtcc_io/: __init__.py  bounds.py  city.py  citymodel.py  dtcc_logging.py  elevationmodel.py  fields.py  footprints.py  generic.py  gridfield.py  info.py  landuse.py  logging.py  mesh.py  meshes.py  pointcloud.py  raster.py  roadnetwork.py  utils.py
src/dtcc_io/cityjson/: cityjson.py  utils.py  write_cityjson.py
src/dtcc_io/dtcc_model/protobuf/: dtcc_pb2.py
src/dtcc_io/mesh/: mesh.py  meshio_loaders.py  pygltflib_loaders.py  utils.py
src/dtcc_io/mesh_old/: mesh.py  meshio_loaders.py  pyassimp_loaders.py  utils.py
src/dtcc_io/process/: __init__.py  raster.py
src/dtcc_io/process/city/: __init__.py  enrich.py  summarize.py
src/dtcc_io/process/citymodel/: __init__.py  enrich.py  summerize.py
src/dtcc_io/process/pointcloud/: __init__.py  convert.py  filters.py
src/dtcc_io/process/raster/: __init__.py  interpolation.py  stats.py
src/dtcc_io/scripts/: dtcc_info.py
src/dtcc_io/view/: __init__.py  citymodel.py
tests/: run-tests.sh
tests/cpp/: CMakeLists.txt  run-tests.cpp
tests/cpp/tests/: TestBoundingBox.h  TestPointCloud.h  TestPolygon.h  TestVector.h
tests/data/: 14040.wld  cube.fbx  footprints.geojson  landuse_testdata.dbf  landuse_testdata.shp  landuse_testdata.shx  test1_316366.gpkg  testraster.tif
tests/data/road_network/: test_road.dbf  test_road.shp  test_road.shx
tests/python/: _test_roadnetwork.py  test_city.py  test_citymodel.py  test_convert_pointcloud.py  test_elevationmodel.py  test_enrich_city.py  test_enrich_citymodel.py  test_info.py  test_landuse.py  test_load_footprints.py  test_mesh.py  test_pointcloud.py  test_process_city.py  test_process_citymodel.py  test_process_pointcloud.py  test_process_raster.py  test_raster.py  test_roadnetwork.py
tests/unittests_py/: test_citymodel.py  test_datamodelio.py  test_elevationmodel.py  test_mesh.py  test_pointcloud.py
