[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "protobuf >= 3.20.0, < 3.21.0",
  "laspy[lazrs]",
  "numpy >= 1.20.0, < 2.0.0",
  "scipy",
  "Fiona",
  "rasterio",
  "shapely",
  "meshio",
  "pyassimp",
  "pygltflib",
  "pyproj",
  "folium",
  "pillow",
  "rasterstats",
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
  "pypoints2grid@git+https://github.com/dwastberg/pypoints2grid.git",
]

name = "dtcc-io"
version = "0.6.1"
description = "DTCC IO"
readme = "README.md"
authors = [
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
