[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "protobuf >= 3.20.0, < 3.21.0",
  "laspy[lazrs] >= 2.3.0, < 3.0.0",
  "numpy >= 1.20.0, < 2.0.0",
  "scipy >= 1.6.0, < 2.0.0",
  "Fiona >= 1.8.0, < 1.9.0",
  "rasterio >= 1.2.0, < 2.0.0",
  "shapely >= 2.0.0, < 3.0.0",
  "meshio >= 5.0.0, < 6.0.0",
  "pyassimp",
  "pygltflib",
  "pyproj >= 3.1.0, < 4.0.0",
  "pillow >= 9.0.0, < 10.0.0",
  "rasterstats >= 0.19.0, < 1.0.0",
  "dtcc-model@git+https://github.com/dtcc-platform/dtcc-model.git@develop",
  "pypoints2grid@git+https://github.com/dwastberg/pypoints2grid.git",
]

name = "dtcc-io"
version = "0.6.2"
description = "DTCC IO"
readme = "README.md"
authors = [
  { name = "Dag Wästberg", email = "dwastberg@gmail.com" },
  { name = "Anders Logg", email = "logg@chalmers.se" },
  { name = "Vasilis Naserentin", email = "vasilis.naserentin@chalmers.se" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
build-verbosity = 1
